--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@ body {
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../assets/about-me.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: Bradley Hand, cursive;
+  font-family: Hand, cursive;
   height: 100%;
 }
 
@@ -19,322 +19,10 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: Bradley Hand, cursive
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 }
 
 .container{
   max-width: 80%;
 }
-/* 
-@media screen and (max-device-width: 480px) and (orientation: portrait) {
-  
-  body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../assets/about-me.jpg") no-repeat fixed;
-    -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  font-family: Bradley Hand, cursive
-  }
-
-  .navbar {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: #24C6DC;
-    position: fixed;
-    overflow: hidden;
-    top: 0;
-    width: 100%;
-    justify-content: start;
-    z-index: 500;
-  }
-
-  .landing-page h1 {
-    
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 7rem;
-    background: -webkit-linear-gradient(#2BC0E4, #EAECC6);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  .landing-page h6 {
-    font-size: 2rem;
-    font-weight: 300;
-    color: #24C6DC;
-  }
-  .landing-page {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-
-  .about-me{
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .about-p{
-    color: white;
-    font-size: x-large;
-  }
-
-  p{
-    font-size: large;
-  }
-  
-  .row{
-    margin: 1%;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-  
-  .about-me img{
-    width: 250px;
-    border-radius: 3%;
-    margin: .81rem;
-  }
-  .my-progress{
-    margin: .30rem;
-  }
-  
-  .my-skils-card {
-    font-size: large;
-    color: black;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    text-align: start;
-    border-radius: 20px;
-    width: 80%;
-    padding: 1%;
-  }
-  
-  .card-title {
-    text-align: center;
-    font-size: large;
-    color: black;
-   }
-  
-
-   #logo-link:hover{
-    background-color: #24C6DC;
-    transform: scale(1.);
-    overflow: hidden;
-   }
-
-
-  .projects-container h2{
-    color:  #24C6DC;
-  }
-    
-  .card {
-    text-align: center;
-    font-size: large;
-    width: 600px;
-    border-radius:  20px;
-    overflow: hidden;
-  }
-  .card-header{
-    font-size: large;
-  }
-  .card a{
-    width: 150px;
-    font-size: large;
-  }
-  
-  .img-hover-zoom {
-    height: 300px;
-    overflow: hidden;
-  }
-  .card a img{
-    width: 38px;
-  }
-
-  .contact-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
-  }
-
-  .my-form{
-    font-size: xx-large;
-    width: 70%;
-
-    background: #F7F7F7;
-  }
-  .my-form h1{
-    background: #24C6DC;
-    margin: -16px -16px 16px -16px;
-  }
-
-}
-
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
-
-    body {
-      font-family: Georgia, "Times New Roman", Times, serif;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../assets/about-me.jpg") no-repeat;
-      -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    font-family: Bradley Hand, cursive
-    }
-
-    .navbar {
-      font-family: fantasy, serif;
-      background-color: #24C6DC;
-      position: fixed;
-      overflow: hidden;
-      top: 0;
-      width: 100%;
-      justify-content: start;
-      align-items: baseline;
-      z-index: 500;
-    }
-
-    .landing-page {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .landing-page h1 {
-      font-family: fantasy, serif;
-      font-size: 8rem;
-      background: -webkit-linear-gradient(#2BC0E4, #EAECC6);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .landing-page h6 {
-      font-size: 2rem;
-      font-weight: 300;
-      color: #24C6DC;
-    }
-    
-    .about-me{
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .about-p{
-      color: white;
-      font-size: large;
-    }
- 
-    p{
-      font-size: small;
-    }
-    
-    .row{
-      margin: 1%;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-    }
-    
-    .about-me img{
-      width: 110px;
-      border-radius: 3%;
-      margin: .81rem;
-    }
-    .my-progress{
-      margin: .30rem;
-    }
-    
-    .my-skils-card {
-      color: black;
-      word-wrap: break-word;
-      background-color: #fff;
-      background-clip: border-box;
-      border: 1px solid rgba(0, 0, 0, 0.125);
-      text-align: start;
-      border-radius: 20px;
-      width: 60%;
-      padding: 1%;
-    }
-    
-    .card-title {
-      text-align: center;
-      font-size: medium;
-      color: black;
-     }
-    
-     #logo-link:hover{
-      background-color: #24C6DC;
-      transform: scale(1.);
-      overflow: hidden;
-     }
-
-
-    .projects-container h2{
-      font-size: x-large;
-      color:  #24C6DC;
-    }
-      
-    .card {
-      text-align: center;
-      font-size: small;
-      width: 300px;
-      height: 440px;
-      border-radius:  20px;
-      overflow: hidden;
-    }
-
-    .card-header{
-      font-size: medium;
-    }
-
-    .card a{
-      width: 100px;
-      font-size: smaller;
-    }
-
-    .img-hover-zoom {
-      height: 300px;
-      overflow: hidden;
-    }
-
-    .card a img{
-      width: 30px;
-    }
-
-    .contact-container{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 90vh;
-    }
-
-    .form-style-6{
-      font-size: small;
-      width: 40%;
-      background: #F7F7F7;
-    }
-
-    .form-style-6 h1{
-      background: #24C6DC;
-      margin: -16px -16px 16px -16px;
-    }
-} */
